force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SubmittedUser__c.field-meta.xml
<CustomField>
    <fullName>SubmittedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>