force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions__c</fullName>
    <formula>IF( ISPICKVAL( SBQQ__Product__r.Family , &quot;Subscription&quot;) , &quot;Subscriptions&quot;, &quot;Other Services&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscriptions</label>
    <type>Text</type>
</CustomField>